﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################
opsi-winst/opsi-script (4.12.0.26) stable; urgency=low

  * osparser: more log_prog in folderlink and getstring
  * osparser: reporterror: catch unknown origin and exceptions
  * osparser: doAktionen: endif: catch exception in log message
  * osparser: execDosBatch: log8 temp file content
  * osparser: executeWith: log8 temp file content
  * osparser: execPowershellCall: log executing

-- Detlef Oertel <d.oertel@uib.de>  Tue, 28 Aug 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.25) stable; urgency=low

  * osconf: readConfigFromService: more debug and try-except with
  * oswebservice: function isConnected2(loglist : TStringlist): boolean;

-- Detlef Oertel <d.oertel@uib.de>  Tue, 17 Jul 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.24) stable; urgency=low

  * osconf: readConfigFromService: more debug and try-except
  * * update indy 5455 to 5464

-- Detlef Oertel <d.oertel@uib.de>  Mon, 16 Jul 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.23) stable; urgency=low

  * switch High DPI support off for Win7 (did not work correctly)

-- Detlef Oertel <d.oertel@uib.de>  Thu, 12 Jul 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.22) stable; urgency=low

  * osparser: doAktionen: importlib; remove double call of
    Script.FSectionNameList.Add(importFunctionName) fixes #3560
  * OsDefinedFunction.parseCallParameter: fixes #3569

-- Detlef Oertel <d.oertel@uib.de>  Wed, 06 Jun 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.21) stable; urgency=low

  * osconf: default for debuglib = true
  * osparser: doAktionen: additional log for indefFunc3
  * osparser: doAktionen: inc/dec indefFunc3 only if keyword is at begining of line
  * oswebservice connection timeout 20 sec not at linux

-- Detlef Oertel <d.oertel@uib.de>  Thu, 17 May 2018:15:00:00 +0200
